--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 
         <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
         <a-nft
-            type='nft' url='./aframe/examples/image-tracking/nft/trex/trex-image/trex'
+            type='nft' url='./img/output/DSC_0004'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
             <a-entity
-                gltf-model='./trex/scene.gltf'
+                gltf-model='./img/ferix_robo.gltf'
                 scale="5 5 5"
                 position="150 300 -100"
                 >
