--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 
         <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
         <a-nft
-            type='nft' url='./img/output/DSC_0004'
+            type='nft' url='/img/output/DSC_0004'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
             <a-entity
-                gltf-model='./img/ferix_robo.gltf'
-                scale="5 5 5"
+                gltf-model='/img/ferix_robo.gltf'
+                scale="0.03 0.03 0.03"
                 position="150 300 -100"
                 >
             </a-entity>
