--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </style>
 
 <!-- rawgithack development URL -->
-<script src='https://raw.githack.com/kaoki0602/sample_ar/master/build/aframe-ar-nft.js'></script>
+<script src='https://raw.githack.com/kaoki0602/sample_ar/main/build/aframe-ar-nft.js'></script>
 
 <body style='margin : 0px; overflow: hidden;'>
    <!-- minimal loader shown until image descriptors are loaded -->
@@ -36,10 +36,10 @@
 
         <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
         <a-nft
-            type='nft' url='./img/output/DSC_0004'
+            type='nft' url='https://raw.githack.com/kaoki0602/sample_ar/main/img/output/DSC_0004'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
             <a-entity
-                gltf-model='./img/ferix_robo.gltf'
+                gltf-model='https://raw.githack.com/kaoki0602/sample_ar/main/img/ferix_robo.gltf'
                 scale="0.03 0.03 0.03"
                 position="150 300 -100"
                 >
