--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         embedded arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'>
 
         <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
-        <a-nft
+        <!-- <a-nft
             type='nft' url='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/kaoki0602/sample_ar/main/img/output/DSC_0004'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
             <a-entity
@@ -45,7 +45,17 @@
                 position="150 300 -100"
                 >
             </a-entity>
-        </a-nft>
+        </a-nft> -->
+        <a-nft
+            type='nft' url='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/trex-image/trex'
+            smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
+            <a-entity
+                gltf-model='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/kaoki0602/sample_ar/main/img/ferix_robo.gltf'
+                scale="0.03 0.03 0.03"
+                position="150 300 -100"
+                >
+            </a-entity>
+        </a-nft> 
 		<a-entity camera></a-entity>
     </a-scene>
 </body>
