--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
     <!-- we use cors proxy to avoid cross-origin problems -->
     <a-nft
       type="nft"
-      url="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/kaoki0602/sample_ar/main/trex-image/trex"
+      url="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/kaoki0602/sample_ar/main/img/output/DSC_0004"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
       smoothThreshold="5"
     >
       <a-entity
-        gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/kaoki0602/sample_ar/main/img/ferix_robo.gltf"
-        scale="0.03 0.03 0.03"
+        gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
+        scale="5 5 5"
         position="50 150 0"
       >
       </a-entity>
